@@ -10,6 +10,11 @@ What's New in Python 3.6.0 alpha 3
 Library
 -------
 
+- Issue #22115: Added methods trace_add, trace_remove and trace_info in the
+  tkinter.Variable class.  They replace old methods trace_variable, trace,
+  trace_vdelete and trace_vinfo that use obsolete Tcl commands and might
+  not work in future versions of Tcl.
+
 - Issue #26243: Only the level argument to zlib.compress() is keyword argument
   now.  The first argument is positional-only.
 
